--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
     />
   </head>
   <body>
-    <!-- <h1>Example title</h1>
-     ❗️❗️❗️ Add partials like so for every page 
+     <h1>Example title</h1>
+     <!--❗️❗️❗️ Add partials like so for every page 
     <include src="./partials/example.html"></include> -->
     <include src="./partials/header.html"></include>
     <include src="./partials/watched.html"></include>
