--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-     <h1>Example title</h1>
+     <!-- <h1>Example title</h1> -->
      <!--❗️❗️❗️ Add partials like so for every page 
     <include src="./partials/example.html"></include> -->
     <include src="./partials/header.html"></include>
